--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Web/Components/App.razor
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Web/Components/App.razor
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["OrleansSekiban.Web.styles.css"]" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="@(new InteractiveServerRenderMode(false))"/>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
