Add weather forecast commands and events for input, update, and deletion

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
@@ -4,6 +4,7 @@
 
 @using OrleansSekiban.Domain
 @using System.ComponentModel.DataAnnotations
+@using OrleansSekiban.Domain.Aggregates.WeatherForecasts.Commands
 @using Sekiban.Pure.Aggregates
 
 @inject WeatherApiClient WeatherApi
