Refactor weather forecast temperature handling to use TemperatureCelsius value object

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
@@ -5,6 +5,7 @@
 @using OrleansSekiban.Domain
 @using System.ComponentModel.DataAnnotations
 @using OrleansSekiban.Domain.Aggregates.WeatherForecasts.Commands
+@using OrleansSekiban.Domain.ValueObjects
 @using Sekiban.Pure.Aggregates
 
 @inject WeatherApiClient WeatherApi
@@ -248,7 +249,7 @@ else
             var command = new InputWeatherForecastCommand(
                 forecastModel.Location!,
                 DateOnly.FromDateTime(forecastModel.Date!.Value),
-                forecastModel.TemperatureC,
+                new TemperatureCelsius(forecastModel.TemperatureC),
                 forecastModel.Summary!);
 
             await WeatherApi.InputWeatherAsync(command);
