Add Playwright testing framework and scripts for end-to-end tests

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
@@ -44,7 +44,7 @@ else
                 <tr>
                     <td>@forecast.Location</td>
                     <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
+                    <td>@forecast.TemperatureC.Value</td>
                     <td>@forecast.TemperatureF</td>
                     <td>@forecast.Summary</td>
                     <td>
