Refactor modal closing logic in Weather component to use DisplayAddModal function

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Web/Components/Pages/Weather.razor
@@ -257,7 +257,7 @@ else
             
             // Reset form and close modal
             forecastModel = new WeatherForecastModel();
-            await JsRuntime.InvokeVoidAsync("$", "#addForecastModal", "modal", "hide");
+            await JsRuntime.InvokeVoidAsync("DisplayAddModal", "hide");
         }
         catch (Exception ex)
         {
