--- a/internalUsages/DaprSample/DaprSample.Web/Components/_Imports.razor
+++ b/internalUsages/DaprSample/DaprSample.Web/Components/_Imports.razor
@@ -6,5 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Microsoft.AspNetCore.OutputCaching
 @using DaprSample.Web
 @using DaprSample.Web.Components
